--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://oss.sonatype.org/content/groups/public' }
         jcenter()
         google()
     }
