AndroidX compatibility update. Target SDK 30 update. Maven version update 1.0.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,10 @@
+
+android.useAndroidX=true
+android.enableJetifier=true
+
 #Maven release values
-VERSION_NAME=0.0.1
-VERSION_CODE=1
+VERSION_NAME=1.0.0
+VERSION_CODE=2
 GROUP=com.github.fusion-com-au
 POM_DESCRIPTION=A lightweight viewpager indicator 
 POM_URL=https://github.com/fusion-com-au/CircleIndicator.git
