--- a/circleindicator/build.gradle
+++ b/circleindicator/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
-version = "1.0.0"
+version = "2.0.0"
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 30
 
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 30
         versionName project.VERSION_NAME
         versionCode Integer.parseInt(project.VERSION_CODE)
     }
@@ -21,9 +21,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-annotations:25.4.0'
-    compile 'com.android.support:support-core-ui:25.4.0'
-    provided 'com.android.support:design:25.4.0'
+    implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    compileOnly 'com.google.android.material:material:1.3.0'
 }
 
 // Used to push in maven
